<resources>
    <string name="app_name">App</string>
    <string name="_342">342</string>
    <string name="number_of_like">number of like</string>
    <string name="likes">likes</string>
    <string name="recipe">recipe</string>
    <string name="mixed_fruit_pancakes_n_recipe">Mixed Fruit Pancakes Recipe</string>
    <string name="arrow_return">arrow return</string>
    <string name="string_arrow_return"/>
    <string name="text1">TextView</string>
    <string name="_20_min">20 min</string>
    <string name="cuisson">cuisson</string>
    <string name="medium">Medium</string>
    <string name="text2">TextView</string>
    <string name="_12">12</string>
    <string name="_200g">200g</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="ingredient">Ingredient</string>
    <string name="per_servings">Per servings</string>
    <string name="round_button">round button</string>
    <string name="difficulty_carre">difficulty carre</string>
    <string name="ingredients">ingredients</string>
    <string name="arrondi">arrondi</string>
    <string name="shopping_list">SHOPPING LIST</string>
    <string name="tagIngredients">Ingredients</string>
    <string name="shopping_string_round_button">shopping @string/round_button</string>
    <string name="grayborder">grayBorder</string>
    <string name="search_recipes">Search recipes</string>
    <string name="search_svg">search svg</string>
    <string name="close_svg">close_svg</string>
    <string name="breakfast">breakfast</string>
    <string name="popular_keywords">Popular Keywords</string>
    <string name="breakfast">breakfast</string>
    <string name="_156">156</string>
    <string name="avocado_salad">avocado salad</string>
    <string name="italian_food">italian food</string>
    <string name="dinner">dinner</string>
    <string name="chinese_recipe">chinese recipe</string>
    <string name="blueberry">blueberry</string>
    <string name="popular_recipe">Popular Recipe</string>
    <string name="chicken_tikka_masala">Chicken Tikka Masala</string>
    <string name="if_there_s_one_dish_nguranteed_to_be_on">If there\'s one dish guranteed to be on...</string>
    <string name="prepare_grill_for_nmedium_high_heat_oil">Prepare grill for medium-high heat oil...</string>
    <string name="swordfish_steaks">Swordfish Steaks</string>
    <string name="_220">220</string>
    <string name="cacio_e_pepe_pasta">Cacio e Pepe Pasta</string>
    <string name="if_one_pasta_dish_nexemplifies_the_comp">If one pasta dish exemplifies the comp...</string>
</resources>
