<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:backgroundTint="?android:attr/colorSecondary">

    <TextView
            android:text="@string/mixed_fruit_pancakes_n_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp" android:textAlignment="center" android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/arrowBack"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.405"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_back_arrow"
            android:id="@+id/arrowBack"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/string_arrow_return"/>
    <ImageView
            android:layout_width="289dp"
            android:layout_height="465dp" app:srcCompat="@drawable/recipe_img"
            android:id="@+id/imageView2"
            android:contentDescription="@string/recipe"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardCornerRadius="20dp" app:cardBackgroundColor="@color/colorAccent"
            android:id="@+id/likeButton"
            app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline9" android:layout_marginStart="100dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/layoutLikes"
                android:gravity="center_vertical|fill_vertical">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_like"
                    android:id="@+id/heartShapeLike"
                    android:contentDescription="@string/likes"
                    app:layout_constraintBottom_toBottomOf="@+id/likeButton"
                    app:layout_constraintStart_toStartOf="@+id/likeButton"
                    android:adjustViewBounds="false" android:cropToPadding="false" android:paddingRight="8dp"
                    android:paddingLeft="8dp" android:paddingTop="4dp" android:paddingBottom="4dp"/>
            <TextView
                    android:text="@string/_342"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/nbrsOfLikes"
                    android:textColor="@android:color/white" android:textStyle="bold"
                    android:contentDescription="@string/number_of_like"
                    app:layout_constraintStart_toEndOf="@+id/heartShapeLike"
                    app:layout_constraintEnd_toEndOf="@+id/likeButton"
                    app:layout_constraintBottom_toBottomOf="@+id/likeButton" android:paddingRight="10dp"
                    android:paddingLeft="8dp" android:paddingTop="4dp" android:paddingBottom="4dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="306dp"
            android:layout_height="181dp"
            app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.529" app:layout_constraintVertical_bias="0.957"
            app:cardCornerRadius="20dp" app:cardElevation="8dp" android:id="@+id/cardView2">
    </android.support.v7.widget.CardView>
    <ImageView
            android:layout_width="172dp"
            android:layout_height="35dp" app:srcCompat="@drawable/btn_green" android:id="@+id/imageView"
            android:elevation="24dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView2" app:layout_constraintStart_toStartOf="@+id/cardView2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/shopping_string_round_button"/>
    <TextView
            android:text="@string/per_servings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/servings"
            android:elevation="24dp" app:layout_constraintStart_toStartOf="@+id/grammes"
            app:layout_constraintEnd_toEndOf="@+id/grammes"
            app:layout_constraintTop_toBottomOf="@+id/grammes"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/tagIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ingredient"
            android:elevation="24dp" app:layout_constraintStart_toStartOf="@+id/ingredients"
            app:layout_constraintEnd_toEndOf="@+id/ingredients"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/ingredients"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/difficulty"
            android:elevation="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15" app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" android:layout_marginBottom="32dp"/>
    <TextView
            android:text="@string/cooking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/info"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ingredients" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="@+id/textView14"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline8"
            app:layout_constraintGuide_percent="0.8194234"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="206dp" android:id="@+id/guideline9"/>
    <TextView
            android:text="@string/_200g"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/grammes"
            android:elevation="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:textColor="#24BF9B" android:textStyle="bold" android:textSize="18sp"
            app:layout_constraintVertical_bias="0.351"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/imageView5" app:layout_constraintEnd_toEndOf="@+id/imageView5"/>
    <TextView
            android:text="@string/medium"
            android:layout_width="0dp"
            android:id="@+id/textView15"
            android:elevation="24dp"
            app:layout_constraintTop_toTopOf="@+id/cardView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintVertical_bias="0.41"
            android:textColor="#24BF9B" android:textStyle="bold" android:textSize="18sp"
            android:layout_height="wrap_content" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/arrondi" app:layout_constraintEnd_toEndOf="@+id/arrondi"/>
    <TextView
            android:text="@string/_20_min"
            android:layout_width="0dp"
            android:layout_height="22dp"
            android:id="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/cardView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2" android:elevation="24dp"
            app:layout_constraintVertical_bias="0.104"
            android:contentDescription="@string/cuisson" android:textColor="#24BF9B" android:textStyle="bold"
            android:typeface="normal" android:fontFamily="sans-serif"
            android:textSize="18sp" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/border" app:layout_constraintEnd_toEndOf="@+id/border"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/_12"
            android:layout_width="118dp"
            android:layout_height="wrap_content" android:id="@+id/ingredients"
            android:elevation="24dp"
            android:textColor="#24BF9B" android:textStyle="bold" android:textSize="18sp"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="70dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/border"/>
    <ImageView
            android:layout_width="118dp"
            android:layout_height="63dp" app:srcCompat="@drawable/btn_round_rect"
            android:id="@+id/border"
            android:elevation="24dp"
            android:contentDescription="@string/round_button"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/cardView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline9" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/arrondiGRIS"/>
    <ImageView
            android:layout_width="113dp"
            android:layout_height="65dp" app:srcCompat="@drawable/btn_round_rect"
            android:id="@+id/arrondi"
            android:elevation="24dp"
            android:contentDescription="@string/difficulty_carre"
            app:layout_constraintTop_toTopOf="@+id/border" app:layout_constraintBottom_toBottomOf="@+id/border"
            app:layout_constraintStart_toStartOf="@+id/guideline9" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView2" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.043" app:layout_constraintVertical_bias="0.444"/>
    <ImageView
            android:layout_width="118dp"
            android:layout_height="61dp" app:srcCompat="@drawable/btn_round_rect"
            android:id="@+id/arrondiGRIS"
            android:elevation="24dp"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline9"
            android:layout_marginEnd="8dp" android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            android:contentDescription="@string/arrondi"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="114dp"
            android:layout_height="61dp" app:srcCompat="@drawable/btn_round_rect"
            android:id="@+id/imageView5"
            android:elevation="24dp"
            android:contentDescription="@string/grayborder"
            app:layout_constraintStart_toEndOf="@+id/arrondiGRIS" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.475" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintVertical_bias="0.642"/>
    <TextView
            android:text="@string/shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:elevation="24dp" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" android:textColor="@android:color/white"
            android:textAlignment="textStart" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"/>
</android.support.constraint.ConstraintLayout>